[gd_scene load_steps=10 format=3 uid="uid://d0eve05x3sq62"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_xn82d"]
[ext_resource type="Texture2D" uid="uid://4me38uj8vfdi" path="res://graphics/player/player.png" id="2_lmx87"]
[ext_resource type="Texture2D" uid="uid://caajaky1wis17" path="res://graphics/decals/white.png" id="3_cenfn"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_qgn68"]
polygon = PackedVector2Array(-5.99999, -55, -15, -62, -23, -60, -35, -59, -47, -57, -59, -57, -64, -49, -73, -47, -89, -41, -92, -30, -98, -17, -96, -9, -97, 7, -88, 14, -89, 19, -82, 32, -79, 39, -74, 47, -63, 60, -47, 59, -14, 50, -3.99999, 45, 5.00001, 41, 12, 41, 10, -30, 5.00001, -44, -1.99999, -50)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f18m7"]
radius = 48.0
height = 100.0

[sub_resource type="Curve" id="Curve_6es4a"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_lk8c4"]
curve = SubResource("Curve_6es4a")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5gnsu"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(-5, 10, 1)
direction = Vector3(100, 0, 0)
initial_velocity_min = -300.0
initial_velocity_max = -300.0
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.3
color = Color(0.557802, 0.861434, 0.999386, 1)
alpha_curve = SubResource("CurveTexture_lk8c4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e2y5j"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(-5, 10, 1)
direction = Vector3(100, 0, 0)
initial_velocity_min = -300.0
initial_velocity_max = -300.0
gravity = Vector3(0, 0, 0)
scale_min = 0.2
scale_max = 0.3
color = Color(0.557802, 0.861434, 0.999386, 1)
alpha_curve = SubResource("CurveTexture_lk8c4")

[node name="Player" type="CharacterBody2D"]
collision_mask = 22
script = ExtResource("1_xn82d")
metadata/_edit_group_ = true

[node name="laser_start_position" type="Node2D" parent="."]
rotation = 1.5708

[node name="Marker2D" type="Marker2D" parent="laser_start_position"]
position = Vector2(12, -95)

[node name="Marker2D2" type="Marker2D" parent="laser_start_position"]
position = Vector2(20, -95)

[node name="Marker2D3" type="Marker2D" parent="laser_start_position"]
position = Vector2(30, -95)

[node name="PlayerImage" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_lmx87")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(-7.62939e-06, 2.38419e-06)
occluder = SubResource("OccluderPolygon2D_qgn68")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-47, 3)
rotation = 1.39626
shape = SubResource("CapsuleShape2D_f18m7")

[node name="laser_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="granade_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true
position_smoothing_speed = 1.0
rotation_smoothing_speed = 1.0

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(97, 20)
emitting = false
process_material = SubResource("ParticleProcessMaterial_5gnsu")
texture = ExtResource("3_cenfn")
lifetime = 0.25
one_shot = true
trail_lifetime = 0.5

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
position = Vector2(97, 20)
emitting = false
process_material = SubResource("ParticleProcessMaterial_e2y5j")
texture = ExtResource("3_cenfn")
lifetime = 0.25
one_shot = true

[connection signal="timeout" from="laser_timer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="granade_timer" to="." method="_on_granade_timer_timeout"]
